--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,8 @@
 {
+  "trailingComma": "none",
+  "quoteProps": "as-needed",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
   "printWidth": 120,
   "tabWidth": 2,
   "useTabs": false
