--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "build": "next build",
     "start": "next start",
     "static": "npx serve@latest out",
-    "lint": "next lint --fix",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
     "prepare": "husky install"
   },
+  "engines": {
+    "node": ">=18.17.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
   "dependencies": {
+    "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -26,6 +34,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8",
@@ -34,6 +44,8 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    "*/**/*.{jsx?,tsx?}": "npm run lint"
+    "*/**/*.{jsx?,tsx?}": [
+      "yarn lint"
+    ]
   }
 }
