--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
+    "@rainbow-me/rainbowkit": "^2.0.1",
+    "@tanstack/react-query": "^5.22.2",
+    "@wagmi/core": "^2.6.5",
     "@wojtekmaj/react-qr-svg": "^1.0.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
@@ -38,7 +41,9 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sharp": "^0.33.2",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "viem": "~2.7.13",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/node": "^20",
