--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
-    "@wojtekmaj/react-qr-svg": "^1.0.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-qrcode-logo": "^2.9.0",
     "sharp": "^0.33.2",
     "swiper": "^11.0.6"
   },
