--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-qrcode-logo": "^2.9.0",
     "sharp": "^0.33.2",
