--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
+    "nuqs": "^1.17.1",
     "react": "^18",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-qrcode-logo": "^2.9.0",
