BE logic init + prisma cchema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
     "titleBar.inactiveBackground": "#CAFC0190",
     "titleBar.activeForeground": "#FFFFFF",
     "titleBar.inactiveForeground": "#FFFFFF"
+  },
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma"
   }
 }
