--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
+    "@prisma/client": "^5.10.2",
     "@rainbow-me/rainbowkit": "^2.0.1",
     "@tanstack/react-query": "^5.22.2",
     "@wagmi/core": "^2.6.5",
@@ -38,6 +39,7 @@
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "nuqs": "^1.17.1",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
