--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "nuqs": "^1.17.1",
     "prisma": "^5.10.2",
     "react": "^18",
