--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
     "@rainbow-me/rainbowkit": "^2.0.1",
+    "@tanstack/query-core": "^5.25.0",
     "@tanstack/react-query": "^5.22.2",
     "@wagmi/core": "^2.6.5",
     "@wojtekmaj/react-qr-svg": "^1.0.0",
