--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
-    "nprogress": "^0.2.0",
     "next-auth": "^4.24.6",
+    "nprogress": "^0.2.0",
     "nuqs": "^1.17.1",
     "prisma": "^5.10.2",
     "react": "^18",
@@ -51,6 +51,7 @@
     "react-icons": "^5.0.1",
     "react-qrcode-logo": "^2.9.0",
     "react-spinners": "^0.13.8",
+    "react-transition-group": "^4.4.5",
     "sharp": "^0.33.2",
     "swiper": "^11.0.6",
     "viem": "~2.7.13",
