Main be int (#36)
* Changes to fetchDomain api

* Changes to createUser api

* Changes to fetchUser api

* Changes to [domain].tsx - src/pages/profile

* Add new entry to constants.ts

* Minor change in getChainEnum.ts

* Add data from db - src/views/profile/HeroView

* Remove emailId field and update follower and following relationships in Domain model

* Remove origin check in fetchDomain API

* Add fetchDomainById API endpoint

* Add API endpoint for adding followers

* Add deleteFollower API endpoint

* Fix conditional check for existing follower and following IDs

* Fix type errors in addFollower.ts

* Fix type casting in addFollower.ts

* Add Domain type to PrismaClient import and fix variable types in addFollower.ts

* Refactor addFollower function to check for existing followers and update follower lists

* Refactor addFollower.ts to fix logic bug

* Add Domain type to PrismaClient import and explicitly cast to Domain type

* Fix condition to check if followerIds array is not empty

* Fix issue with adding followers

* Fix issue with adding followers

* Changes to prisma schema

* Add follower details fetching logic and loading state

* Add follower details and loading state to FollowingView component

* Update social links in HeroView component

* Refactor profile page components

* Refactor FollowerView component

* Refactor FollowingView component

* Update TabView component to pass domain prop to FollowerView and FollowingView

* Add Prisma generation to dev and build scripts

* Refactor fetchDomain API to include error handling for domain not found

* Fix domain query parameter in profile page

* Update USER_SOCIAL_LINKS array with domainData

* delete yarn.lock

* Add follower and following counts to HeroView

* Add primaryDomain field to User model

* Add getChainEnum import and include User in domain query

* Refactor domain management page and fetch user and domain details


--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "ZNS Connect Team <team@znsconnect.io>",
   "homepage": "https://znsconnect.io",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "prisma generate && next dev",
+    "build": "prisma generate && next build",
     "start": "next start",
     "static": "npx serve@latest out",
     "lint": "next lint",
