--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vercel/blob": "^0.22.1",
     "@wagmi/core": "^2.6.5",
     "@wojtekmaj/react-qr-svg": "^1.0.0",
+    "alchemy-sdk": "^3.2.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
